Fix grey background width issue on small screens

--- a/src/components/Body/index.module.css
+++ b/src/components/Body/index.module.css
@@ -12,6 +12,7 @@
     background-color: #2A2A2A;
     padding: 2rem 1rem;
     width: 100%;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
